--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,14 @@
 <!doctype html>
-<html>
+<html style="scroll-behavior: smooth;">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Recruitment SaaS MVP</title>
+    <title>RecruitHub - Modern Recruitment SaaS Platform</title>
+    <meta name="description" content="Streamline your recruitment process with our complete SaaS platform. Connect companies with top talent through secure, efficient workflows." />
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💼</text></svg>" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
