Implement SEO optimization with meta tags, Open Graph, Twitter Cards, and structured data
- Added comprehensive meta tags (keywords, author, robots, language)
- Implemented Open Graph tags for Facebook sharing
- Added Twitter Card meta tags for Twitter sharing
- Included structured data (JSON-LD) for Organization and WebSite schemas
- Updated MVP checklist to mark X.16 and X.17 as completed

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>RecruitHub - Modern Recruitment SaaS Platform</title>
     <meta name="description" content="Streamline your recruitment process with our complete SaaS platform. Connect companies with top talent through secure, efficient workflows." />
+    <meta name="keywords" content="recruitment, SaaS, hiring, job applications, candidate management, secure document storage, HR platform, talent acquisition" />
+    <meta name="author" content="RecruitHub" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://recruithub.com/" />
+    <meta property="og:title" content="RecruitHub - Modern Recruitment SaaS Platform" />
+    <meta property="og:description" content="Streamline your recruitment process with our complete SaaS platform. Connect companies with top talent through secure, efficient workflows." />
+    <meta property="og:image" content="https://recruithub.com/og-image.jpg" />
+    <meta property="og:site_name" content="RecruitHub" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://recruithub.com/" />
+    <meta property="twitter:title" content="RecruitHub - Modern Recruitment SaaS Platform" />
+    <meta property="twitter:description" content="Streamline your recruitment process with our complete SaaS platform. Connect companies with top talent through secure, efficient workflows." />
+    <meta property="twitter:image" content="https://recruithub.com/og-image.jpg" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "RecruitHub",
+      "url": "https://recruithub.com",
+      "logo": "https://recruithub.com/logo.png",
+      "description": "A comprehensive SaaS platform that streamlines the recruitment process by connecting companies with qualified candidates through secure, efficient workflows.",
+      "foundingDate": "2025",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "telephone": "+1-555-123-4567",
+        "contactType": "customer service",
+        "availableLanguage": ["English", "French"]
+      },
+      "sameAs": [
+        "https://www.linkedin.com/company/recruithub",
+        "https://twitter.com/recruithub"
+      ]
+    }
+    </script>
+
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "RecruitHub",
+      "url": "https://recruithub.com",
+      "description": "Modern Recruitment SaaS Platform for connecting companies with top talent",
+      "publisher": {
+        "@type": "Organization",
+        "name": "RecruitHub"
+      },
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://recruithub.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
+    }
+    </script>
+
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>💼</text></svg>" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
